# Animated-Wallpaper-For-Linux

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  TODO  locations.txt
code/: app.cpp  config.hpp  main.cpp  main_app.cpp  main_app.hpp  main_window.cpp  main_window.hpp  window.cpp  window.hpp
code/renderer/: buffer.hpp  gl_log.cpp  gl_log.hpp  shader.cpp  shader.hpp  video.cpp  video.hpp
code/renderer/shaders/: video.fs  video.vs
code/std/: filesystem  optional  string_view
code/sys/: application.cpp  application.hpp  desktop_info.cpp  desktop_info.hpp  environment.cpp  environment.hpp  mimeapps.cpp  mimeapps.hpp
code/util/: assert.hpp  deubg_print.hpp
include/: app.hpp  desktop_info.hpp  env.hpp  environment.hpp  window.hpp
include/std/: filesystem.hpp  optional.hpp  string_view.hpp
include/util/: assert.hpp
scripts/: get_desktop_env.sh
src/: app.cpp  desktop_info.cpp  env.cpp  environment.cpp  main.cpp  window.cpp
